Fix mobile flex-wrap rendering issues in <AboutMePage/> and <ProfileCard/>

--- a/src/Components/Pages/Page.css
+++ b/src/Components/Pages/Page.css
@@ -28,6 +28,7 @@
   justify-content: space-around;
   align-items: center;
   flex-shrink: 0;
+  flex-wrap: wrap;
 }
 
 #Page .item_card_container {
