--- a/src/Components/ProfileCard/ProfileCard.css
+++ b/src/Components/ProfileCard/ProfileCard.css
@@ -45,12 +45,15 @@
   justify-content: space-between;
   align-items: center;
   width: 100%;
+  padding-bottom: 5px;
+  flex-wrap: wrap;
 }
 
 #ProfileCard .row {
   display: flex;
   justify-content: flex-start;
   align-items: center;
+  flex-wrap: wrap;
 }
 
 #ProfileCard .social_media_img {
